rubocop: Silence a couple of warnings in the SuSEFirewall module
In the SuSEFirewall module we really want to use class variables so they
can be inherited by subclasses so ignore that warning for that file.
Moreover, skip the 'Next' check since it forces us to refactor the code
in a sub-optimal way.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,11 @@ Style/AccessorMethodName:
 Style/ClassAndModuleCamelCase:
   Enabled: false
 
+Style/ClassVars:
+  # We really need the class variables in SuSEFirewall module
+  Exclude:
+    - "library/network/src/modules/SuSEFirewall.rb"
+
 # ensure new code is properly documented
 Style/Documentation:
   Include:
@@ -47,6 +52,12 @@ Style/FileName:
 Style/MethodName:
   Include:
     - "library/*/src/lib/**/*.rb"
+
+Style/Next:
+  # skip this check for SuSEFirewall since it forces us to refactor
+  # the code in a sub-optimal way.
+  Exclude:
+    - "library/network/src/modules/SuSEFirewall.rb"
 
 # keep it as it is part of API for old code
 Style/PredicateName:
